# cypherman

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  LICENSE  Procfile  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
config/: dev.env.example  test.env.example
deploy/: gunicorn.conf.py
docker/: Dockerfile  docker-compose.env  docker-compose.yml
docs/: main.md
docs/diagrams/: database.drawio  design.drawio
scripts/: poetry-add.sh  test.sh
src/app/: main.py
src/app/api/: __init__.py
src/app/api/v0/: __init__.py
src/app/api/v0/routers/: hashes.py
src/app/config/: __init__.py  base.py  dependencies.py  development.py  production.py  settings.py  testing.py
src/app/core/: exceptions.py
src/app/core/config/: __init__.py  base.py  dependencies.py  development.py  production.py  testing.py
src/app/core/db/: __init__.py  constants.py  dependencies.py  initialize.py  mappers.py
src/app/db/: __init__.py  constants.py  database.py  dependencies.py
src/app/dtos/: __init__.py  hashes.py  hashes_dto.py  users.py
src/app/entities/hashing_algorithms/: __init__.py  hashing_algorithm.py  md5.py  sha1.py  sha256.py
src/app/entities/users/: __init__.py  mapper.py  table.py  user.py
src/app/repositories/user/: __init__.py  iuser_repository.py  user_repository.py
src/app/schemas/: __init__.py  hashes_dto.py
src/app/services/hashing/: __init__.py  hashing_service.py  ihashing_service.py
src/app/services/hashing/factories/: __init__.py  hashing_algorithm_factory.py  ihashing_algorithm_factory.py
src/app/services/users/: __init__.py  exceptions.py  iuser_service.py  user_service.py
src/tests/api/v0/routers/hashes/: conftest.py
src/tests/api/v0/routers/hashes/mocks/: __init__.py  hashing_service_mock.py
src/tests/entities/hashing_algorithms/: conftest.py  test_md5.py  test_sha1.py  test_sha256.py
src/tests/integration/api/v0/routers/hashes/: conftest.py  test_hashes_controllers.py
src/tests/integration/api/v0/routers/hashes/mocks/: __init__.py  hashing_service_mock.py
src/tests/integration/repositories/user/: conftest.py  test_user_repository.py
src/tests/services/hashing/factories/: conftest.py  test_hashing_algorithm_factory.py
src/tests/services/hashing/factories/mocks/: __init__.py  md5_mock.py  sha1_mock.py
src/tests/services/hashing/service/: conftest.py  test_hashing_service.py
src/tests/services/hashing/service/mocks/: __init__.py  factory_mock.py  md5_mock.py  sha1_mock.py
src/tests/unit/config/: conftest.py  test_dependencies.py
src/tests/unit/config/mocks/: __init__.py  config_mock.py
src/tests/unit/entities/hashing_algorithms/: conftest.py  test_md5.py  test_sha1.py  test_sha256.py
src/tests/unit/services/hashing/factories/: conftest.py  test_hashing_algorithm_factory.py
src/tests/unit/services/hashing/factories/mocks/: __init__.py  md5_mock.py  sha1_mock.py
src/tests/unit/services/hashing/service/: conftest.py  test_hashing_service.py
src/tests/unit/services/hashing/service/mocks/: __init__.py  factory_mock.py  md5_mock.py  sha1_mock.py
