[tool.poetry]
name = "cypherman"
version = "0.0.0"
description = ""
authors = ["Kostiantyn <konstkadyr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
fastapi = "^0.70.0"
uvicorn = {extras = ["standart"], version = "^0.15.0"}
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "src/tests",
]
