[tool.poetry]
name = "cypherman"
version = "0.0.0"
description = ""
authors = ["Kostiantyn <konstkadyr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
fastapi = "^0.70.0"
uvicorn = {extras = ["standart"], version = "^0.15.0"}
python-dotenv = "^0.19.2"
gunicorn = {version = "^20.1.0", optional = true}
SQLAlchemy = "^1.4.29"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-pythonpath = "^0.7.4"
requests = "^2.26.0"

[tool.poetry.extras]
production = ["gunicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "src/tests",
]
python_paths = [
    "src/",
    "src/app/",
]
